# screen-capture-qt

./: CMakeLists.txt  Info.plist.in  README.md  audit.md  entitlements.plist  screen_capture_qt_plan.md
.github/: copilot-instructions.md
.github/workflows/: build.yml
resources/: dark.qss  resources.qrc
src/: appcontroller.cpp  appcontroller.hpp  bufferedstrategy.cpp  bufferedstrategy.hpp  globakhotkeys.cpp  globakhotkeys.hpp  globakhotkeys.mm  globalinputmanager.hpp  globalinputmanager.mm  main.cpp  mousepanner.hpp  recorderworker.cpp  recorderworker.hpp  recordingstrategy.hpp  streamingstrategy.cpp
src/capture/: screencaptureworker.cpp  screencaptureworker.hpp
src/encoding/: gifencoder.cpp  gifencoder.hpp  videoencoder.cpp  videoencoder.hpp
src/platform/: macos_window.h  macos_window.mm  sckbackend.mm  windowhelpers.cpp  x11_window.cpp  x11_window.hpp
src/ui/: capturewindow.cpp  capturewindow.hpp  centerhandle.cpp  centerhandle.hpp  controlbar.cpp  controlbar.hpp  editwindow.cpp  systemtray.cpp
tests/: mouse_panner_test.cpp
